[project]
name = "release-toolkit"
version = "0.1.0"
description = "Reusable Commitizen-based release tooling for monorepo and single-package projects"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Reef Technologies", email = "opensource@reef.pl"}]
license = {text = "BSD-3-Clause"}
license-files = ["LICENSE"]
dependencies = ["commitizen>=4.13", "tomlkit>=0.13"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "pyright",
]

[project.scripts]
release-toolkit = "release_toolkit.cli:main"
rt = "release_toolkit.cli:main"

[project.entry-points."commitizen.plugin"]
impacts_cz = "release_toolkit.cz_plugin:ImpactsCz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/release_toolkit"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
exclude = [".venv", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "impacts_cz"
version_provider = "pep621"
tag_format = "v$version"
annotated_tag = true
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
changelog_merge_prerelease = true
major_version_zero = true
