[project]
name = "demo"
dynamic = ["version"]
description = "Example single-package repo using release-toolkit"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "release-toolkit>=0.2.0,<1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.*)$"
fallback-version = "0.0.0"

[tool.commitizen]
name = "impacts_cz"
version_provider = "scm"
annotated_tag = true
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
# no `impacts` -> no per-package filtering
